# filamentQt

./: CMakeLists.txt  README.md  main.cpp
asset/: resource.qrc
asset/material/: bakedColor.inc  bakedColor.mat
asset/qml/: ColorItem.qml  main.qml
asset/tool/: matc.sh
assets/: resource.qrc  scripts.qrc
cmake/: qt_config.cmake  tool.cmake
src/: FilamentWindow.cpp  FilamentWindow.h
src/texture/: RenderThread.cpp  RenderThread.h  TextureNode.cpp  TextureNode.h  TextureView.cpp  TextureView.h
